--- a/free-wallpaper-front-end/package.json
+++ b/free-wallpaper-front-end/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
     "buffer": "^6.0.3",
+    "classnames": "^2.5.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
