--- a/free-wallpaper-front-end/package.json
+++ b/free-wallpaper-front-end/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^5.3.2",
     "buffer": "^6.0.3",
     "classnames": "^2.5.1",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
