--- a/free-wallpaper-front-end/package.json
+++ b/free-wallpaper-front-end/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "buffer": "^6.0.3",
     "classnames": "^2.5.1",
-    "framer-motion": "^11.2.10",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.2.10",
     "jszip": "^3.10.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
