--- a/free-wallpaper-back-end/package.json
+++ b/free-wallpaper-back-end/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "buffer": "^6.0.3",
@@ -23,7 +24,8 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
