--- a/free-wallpaper-back-end/.env.example
+++ b/free-wallpaper-back-end/.env.example
@@ -6,3 +6,7 @@ DB_NAME =
 MONGO_URI = 
 FRONT_END_URL = 
 PASSWORD_HASH_KEY = 
+JWT_SECRET = 
+CLOUDINARY_NAME = 
+CLOUDINARY_KEY = 
+CLOUDINARY_SECRET = 
