--- a/free-wallpaper-back-end/.env.example
+++ b/free-wallpaper-back-end/.env.example
@@ -6,3 +6,14 @@ DB_NAME =
 MONGO_URI = 
 FRONT_END_URL = 
 PASSWORD_HASH_KEY = 
+#Create new file name .env with following variables
+
+PORT = 9999
+HOST_NAME = 'localhost'
+DB_NAME = "SDN301m"
+MONGO_URI = "mongodb://127.0.0.1:27017/"
+FRONT_END_URL = 
+PASSWORD_HASH_KEY = 
+CLOUDINARY_NAME = "debx8syhr"
+CLOUDINARY_KEY = "478289991153537"
+CLOUDINARY_SECRET = "BOpnCZ9twk8RjObUdoWwwsR74Jk"
