--- a/free-wallpaper-front-end/package.json
+++ b/free-wallpaper-front-end/package.json
@@ -13,9 +13,12 @@
     "classnames": "^2.5.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.2.10",
+    "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-intersection-observer": "^9.10.3",
