--- a/free-wallpaper-back-end/package.json
+++ b/free-wallpaper-back-end/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.13",
+    "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
